// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#bundles/molecules/elements/BundleGroupMetaFields renders 1`] = `
<DocumentFragment>
  <div
    class="col-sm-12 bundle-group-edit__section"
  >
    <h1>
      Edit Bundle Group
    </h1>
    <div
      class="form-group"
    >
      <label
        class="control-label"
        for="id_bundleType"
      >
        Bundle Type
      </label>
      <div>
        <select
          class="form-control"
          id="id_bundleType"
          name="bundleType"
        >
          <option
            value="default"
          >
            Default
          </option>
        </select>
      </div>
    </div>
    <div
      class="form-group"
    >
      <label
        class="control-label"
        for="id_name"
      >
        Name
      </label>
      <div>
        <input
          class="form-control"
          id="id_name"
          maxlength="200"
          name="name"
          value=""
        />
      </div>
    </div>
    <div
      class="form-group"
    >
      <label
        class="control-label"
        for="id_headline"
      >
        Headline
      </label>
      <div>
        <textarea
          class="form-control"
          cols="40"
          id="id_headline"
          name="headline"
          rows="4"
        />
      </div>
    </div>
    <div
      class="form-group"
    >
      <label
        class="control-label"
        for="id_active_status"
      >
        Active Status
      </label>
      <div>
        <select
          class="form-control"
          id="id_isActive"
          name="isActive"
        >
          <option
            value="true"
          >
            Active
          </option>
          <option
            value="false"
          >
            Inactive
          </option>
        </select>
      </div>
    </div>
    <div
      class="form-group"
    >
      <label
        class="control-label"
        for="id_description"
      >
        Description
      </label>
      <div>
        <textarea
          class="form-control"
          cols="40"
          id="id_description"
          name="description"
          rows="4"
        />
      </div>
    </div>
    <div
      class="form-group"
    >
      <label
        class="control-label"
        for="id_image"
      >
        Image
      </label>
      <div>
        <span>
          Currently: 
          <a
            href="https://placeimg.com/640/480/any"
            rel="noreferrer"
            target="_blank"
          >
            any
          </a>
           
          <input
            id="bundle-edit-form-clear-img"
            type="checkbox"
          />
           
          <label
            for="bundle-edit-form-clear-img"
          >
            Clear
          </label>
        </span>
        <input
          class="form-control"
          id="id_image"
          name="image"
          type="file"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`#bundles/molecules/elements/BundleGroupMetaFields renders error messages 1`] = `
<DocumentFragment>
  <div
    class="col-sm-12 bundle-group-edit__section"
  >
    <h1>
      Create Bundle Group
    </h1>
    <div
      class="form-group"
    >
      <label
        class="control-label"
        for="id_bundleType"
      >
        Bundle Type
      </label>
      <div>
        <select
          class="form-control"
          id="id_bundleType"
          name="bundleType"
        />
      </div>
    </div>
    <div
      class="form-group has-error"
    >
      <label
        class="control-label"
        for="id_name"
      >
        Name
      </label>
      <div>
        <input
          class="form-control"
          id="id_name"
          maxlength="200"
          name="name"
          value=""
        />
        <span
          class="help-block"
        >
          <i
            class="fas fa-exclamation"
          />
           Please choose a valid name
        </span>
      </div>
    </div>
    <div
      class="form-group"
    >
      <label
        class="control-label"
        for="id_headline"
      >
        Headline
      </label>
      <div>
        <textarea
          class="form-control"
          cols="40"
          id="id_headline"
          name="headline"
          rows="4"
        />
      </div>
    </div>
    <div
      class="form-group"
    >
      <label
        class="control-label"
        for="id_active_status"
      >
        Active Status
      </label>
      <div>
        <select
          class="form-control"
          id="id_isActive"
          name="isActive"
        >
          <option
            value="true"
          >
            Active
          </option>
          <option
            value="false"
          >
            Inactive
          </option>
        </select>
      </div>
    </div>
    <div
      class="form-group"
    >
      <label
        class="control-label"
        for="id_description"
      >
        Description
      </label>
      <div>
        <textarea
          class="form-control"
          cols="40"
          id="id_description"
          name="description"
          rows="4"
        />
      </div>
    </div>
    <div
      class="form-group"
    >
      <label
        class="control-label"
        for="id_image"
      >
        Image
      </label>
      <div>
        <input
          class="form-control"
          id="id_image"
          name="image"
          type="file"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
